interprete/.antlr/SwiftGrammarParser.java
// Generated from d:/Documentos/USAC/Cursos/Cursos Segundo Semestre 2023/Laboratorio Organización de Lenguajes y Compiladores 2 - copia/Proyectos/Proyecto 2/interprete/SwiftGrammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SwiftGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, FLOAT=2, BOOL=3, CHARACTER=4, PSTRING=5, NIL=6, TRU=7, FAL=8, PRINT=9, 
		IF=10, ELSE=11, WHILE=12, FOR=13, GUARD=14, IN=15, SWITCH=16, CASE=17, 
		DEFAULT=18, VAR=19, LET=20, BREAK=21, RETURN=22, CONTINUE=23, FUNC=24, 
		COUNT=25, ISEMPTY=26, APPEND=27, REMOVE_LAST=28, REMOVE=29, STRUCT=30, 
		STRUCT_VAR=31, STRUCT_LET=32, INOUT=33, AT=34, ST=35, NUMBER=36, STRING=37, 
		ID=38, DIF=39, IG_IG=40, NOT=41, OR=42, AND=43, IG=44, MAY_IG=45, MEN_IG=46, 
		MAYOR=47, MENOR=48, MUL=49, DIV=50, ADD=51, SUB=52, MOD=53, PARIZQ=54, 
		PARDER=55, LLAVEIZQ=56, LLAVEDER=57, CORCHIZQ=58, CORCHDER=59, DOSPUNTOS=60, 
		COMA=61, PTCOMA=62, INTERROGACION=63, PUNTO=64, GUIONBAJO=65, AMPERSON=66, 
		WHITESPACE=67, COMMENT=68, LINE_COMMENT=69;
	public static final int
		RULE_s = 0, RULE_block = 1, RULE_blockFunc = 2, RULE_stmt = 3, RULE_defstructstmt = 4, 
		RULE_lista_atributos = 5, RULE_struct_expr = 6, RULE_valor_struct_expr = 7, 
		RULE_l_dupla = 8, RULE_accesostructstmt = 9, RULE_asignstructstmt = 10, 
		RULE_vector_struct_stmt = 11, RULE_acceso_vector_struct_stmt = 12, RULE_append_vector_struct_stmt = 13, 
		RULE_declvectorstmt = 14, RULE_defvectorstmt = 15, RULE_listaexpresiones = 16, 
		RULE_accesovectorstmt = 17, RULE_asignvectorstmt = 18, RULE_appendvectorstmt = 19, 
		RULE_removeatvectorstmt = 20, RULE_removelastvectorstmt = 21, RULE_countvectorstmt = 22, 
		RULE_isemptyvectorstmt = 23, RULE_declmatrizstmt = 24, RULE_tipomatriz = 25, 
		RULE_listavaloresmatriz = 26, RULE_listavaloresmatriz3 = 27, RULE_accesomatriz = 28, 
		RULE_asignmatrizstmt = 29, RULE_returnstmt = 30, RULE_breakstmt = 31, 
		RULE_continuestmt = 32, RULE_printstmt = 33, RULE_intstmt = 34, RULE_floatstmt = 35, 
		RULE_stringstmt = 36, RULE_funcdclstmt = 37, RULE_accfuncstm = 38, RULE_parametros = 39, 
		RULE_parametroscall = 40, RULE_ifstmt = 41, RULE_elseifstmt = 42, RULE_switchstmt = 43, 
		RULE_caseStmt = 44, RULE_defaultCase = 45, RULE_typedDeclstmt = 46, RULE_untypedDeclstmt = 47, 
		RULE_optionalTypedDeclstmt = 48, RULE_asignstmt = 49, RULE_whilestmt = 50, 
		RULE_forstmt = 51, RULE_guardstmt = 52, RULE_rangostmt = 53, RULE_opasignstmt = 54, 
		RULE_expr = 55, RULE_tipo = 56, RULE_tipo_vector = 57, RULE_tipo_matriz2 = 58, 
		RULE_tipo_matriz3 = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "block", "blockFunc", "stmt", "defstructstmt", "lista_atributos", 
			"struct_expr", "valor_struct_expr", "l_dupla", "accesostructstmt", "asignstructstmt", 
			"vector_struct_stmt", "acceso_vector_struct_stmt", "append_vector_struct_stmt", 
			"declvectorstmt", "defvectorstmt", "listaexpresiones", "accesovectorstmt", 
			"asignvectorstmt", "appendvectorstmt", "removeatvectorstmt", "removelastvectorstmt", 
			"countvectorstmt", "isemptyvectorstmt", "declmatrizstmt", "tipomatriz", 
			"listavaloresmatriz", "listavaloresmatriz3", "accesomatriz", "asignmatrizstmt", 
			"returnstmt", "breakstmt", "continuestmt", "printstmt", "intstmt", "floatstmt", 
			"stringstmt", "funcdclstmt", "accfuncstm", "parametros", "parametroscall", 
			"ifstmt", "elseifstmt", "switchstmt", "caseStmt", "defaultCase", "typedDeclstmt", 
			"untypedDeclstmt", "optionalTypedDeclstmt", "asignstmt", "whilestmt", 
			"forstmt", "guardstmt", "rangostmt", "opasignstmt", "expr", "tipo", "tipo_vector", 
			"tipo_matriz2", "tipo_matriz3"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'float'", "'bool'", "'character'", "'String'", "'nil'", 
			"'true'", "'false'", "'print'", "'if'", "'else'", "'while'", "'for'", 
			"'guard'", "'in'", "'switch'", "'case'", "'default'", "'var'", "'let'", 
			"'break'", "'return'", "'continue'", "'func'", "'count'", "'IsEmpty'", 
			"'append'", "'removeLast'", "'remove'", "'struct'", "'varst'", "'letst'", 
			"'inout'", "'at'", "'st'", null, null, null, "'!='", "'=='", "'!'", "'||'", 
			"'&&'", "'='", "'>='", "'<='", "'>'", "'<'", "'*'", "'/'", "'+'", "'-'", 
			"'%'", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "','", "';'", 
			"'?'", "'.'", "'_'", "'&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "FLOAT", "BOOL", "CHARACTER", "PSTRING", "NIL", "TRU", "FAL", 
			"PRINT", "IF", "ELSE", "WHILE", "FOR", "GUARD", "IN", "SWITCH", "CASE", 
			"DEFAULT", "VAR", "LET", "BREAK", "RETURN", "CONTINUE", "FUNC", "COUNT", 
			"ISEMPTY", "APPEND", "REMOVE_LAST", "REMOVE", "STRUCT", "STRUCT_VAR", 
			"STRUCT_LET", "INOUT", "AT", "ST", "NUMBER", "STRING", "ID", "DIF", "IG_IG", 
			"NOT", "OR", "AND", "IG", "MAY_IG", "MEN_IG", "MAYOR", "MENOR", "MUL", 
			"DIV", "ADD", "SUB", "MOD", "PARIZQ", "PARDER", "LLAVEIZQ", "LLAVEDER", 
			"CORCHIZQ", "CORCHDER", "DOSPUNTOS", "COMA", "PTCOMA", "INTERROGACION", 
			"PUNTO", "GUIONBAJO", "AMPERSON", "WHITESPACE", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SwiftGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SwiftGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SwiftGrammarParser.EOF, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			block();
			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> PTCOMA() { return getTokens(SwiftGrammarParser.PTCOMA); }
		public TerminalNode PTCOMA(int i) {
			return getToken(SwiftGrammarParser.PTCOMA, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 310344513024L) != 0)) {
				{
				{
				setState(123);
				stmt();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PTCOMA) {
					{
					setState(124);
					match(PTCOMA);
					}
				}

				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockFuncContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> PTCOMA() { return getTokens(SwiftGrammarParser.PTCOMA); }
		public TerminalNode PTCOMA(int i) {
			return getToken(SwiftGrammarParser.PTCOMA, i);
		}
		public BlockFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).enterBlockFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).exitBlockFunc(this);
		}
	}

	public final BlockFuncContext blockFunc() throws RecognitionException {
		BlockFuncContext _localctx = new BlockFuncContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blockFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 310344513024L) != 0)) {
				{
				{
				setState(132);
				stmt();
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PTCOMA) {
					{
					setState(133);
					match(PTCOMA);
					}
				}

				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public PrintstmtContext printstmt() {
			return getRuleContext(PrintstmtContext.class,0);
		}
		public TypedDeclstmtContext typedDeclstmt() {
			return getRuleContext(TypedDeclstmtContext.class,0);
		}
		public UntypedDeclstmtContext untypedDeclstmt() {
			return getRuleContext(UntypedDeclstmtContext.class,0);
		}
		public OptionalTypedDeclstmtContext optionalTypedDeclstmt() {
			return getRuleContext(OptionalTypedDeclstmtContext.class,0);
		}
		public AsignstmtContext asignstmt() {
			return getRuleContext(AsignstmtContext.class,0);
		}
		public IfstmtContext ifstmt() {
			return getRuleContext(IfstmtContext.class,0);
		}
		public SwitchstmtContext switchstmt() {
			return getRuleContext(SwitchstmtContext.class,0);
		}
		public WhilestmtContext whilestmt() {
			return getRuleContext(WhilestmtContext.class,0);
		}
		public ForstmtContext forstmt() {
			return getRuleContext(ForstmtContext.class,0);
		}
		public GuardstmtContext guardstmt() {
			return getRuleContext(GuardstmtContext.class,0);
		}
		public OpasignstmtContext opasignstmt() {
			return getRuleContext(OpasignstmtContext.class,0);
		}
		public FuncdclstmtContext funcdclstmt() {
			return getRuleContext(FuncdclstmtContext.class,0);
		}
		public AccfuncstmContext accfuncstm() {
			return getRuleContext(AccfuncstmContext.class,0);
		}
		public BreakstmtContext breakstmt() {
			return getRuleContext(BreakstmtContext.class,0);
		}
		public ContinuestmtContext continuestmt() {
			return getRuleContext(ContinuestmtContext.class,0);
		}
		public ReturnstmtContext returnstmt() {
			return getRuleContext(ReturnstmtContext.class,0);
		}
		public DeclvectorstmtContext declvectorstmt() {
			return getRuleContext(DeclvectorstmtContext.class,0);
		}
		public AccesovectorstmtContext accesovectorstmt() {
			return getRuleContext(AccesovectorstmtContext.class,0);
		}
		public AppendvectorstmtContext appendvectorstmt() {
			return getRuleContext(AppendvectorstmtContext.class,0);
		}
		public RemovelastvectorstmtContext removelastvectorstmt() {
			return getRuleContext(RemovelastvectorstmtContext.class,0);
		}
		public RemoveatvectorstmtContext removeatvectorstmt() {
			return getRuleContext(RemoveatvectorstmtContext.class,0);
		}
		public AsignvectorstmtContext asignvectorstmt() {
			return getRuleContext(AsignvectorstmtContext.class,0);
		}
		public DeclmatrizstmtContext declmatrizstmt() {
			return getRuleContext(DeclmatrizstmtContext.class,0);
		}
		public AsignmatrizstmtContext asignmatrizstmt() {
			return getRuleContext(AsignmatrizstmtContext.class,0);
		}
		public DefstructstmtContext defstructstmt() {
			return getRuleContext(DefstructstmtContext.class,0);
		}
		public AsignstructstmtContext asignstructstmt() {
			return getRuleContext(AsignstructstmtContext.class,0);
		}
		public Struct_exprContext struct_expr() {
			return getRuleContext(Struct_exprContext.class,0);
		}
		public Vector_struct_stmtContext vector_struct_stmt() {
			return getRuleContext(Vector_struct_stmtContext.class,0);
		}
		public Append_vector_struct_stmtContext append_vector_struct_stmt() {
			return getRuleContext(Append_vector_struct_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).exitStmt(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				printstmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				typedDeclstmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				untypedDeclstmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				optionalTypedDeclstmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(145);
				asignstmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(146);
				ifstmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(147);
				switchstmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(148);
				whilestmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(149);
				forstmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(150);
				guardstmt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(151);
				opasignstmt();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(152);
				funcdclstmt();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(153);
				accfuncstm();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(154);
				breakstmt();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(155);
				continuestmt();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(156);
				returnstmt();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(157);
				declvectorstmt();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(158);
				accesovectorstmt();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(159);
				appendvectorstmt();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(160);
				removelastvectorstmt();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(161);
				removeatvectorstmt();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(162);
				asignvectorstmt();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(163);
				declmatrizstmt();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(164);
				asignmatrizstmt();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(165);
				defstructstmt();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(166);
				asignstructstmt();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(167);
				struct_expr();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(168);
				vector_struct_stmt();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(169);
				append_vector_struct_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefstructstmtContext extends ParserRuleContext {
		public DefstructstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defstructstmt; }
	 
		public DefstructstmtContext() { }
		public void copyFrom(DefstructstmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DefStructContext extends DefstructstmtContext {
		public TerminalNode STRUCT() { return getToken(SwiftGrammarParser.STRUCT, 0); }
		public TerminalNode ID() { return getToken(SwiftGrammarParser.ID, 0); }
		public TerminalNode LLAVEIZQ() { return getToken(SwiftGrammarParser.LLAVEIZQ, 0); }
		public TerminalNode LLAVEDER() { return getToken(SwiftGrammarParser.LLAVEDER, 0); }
		public List<Lista_atributosContext> lista_atributos() {
			return getRuleContexts(Lista_atributosContext.class);
		}
		public Lista_atributosContext lista_atributos(int i) {
			return getRuleContext(Lista_atributosContext.class,i);
		}
		public DefStructContext(DefstructstmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).enterDefStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SwiftGrammarListener ) ((SwiftGrammarListener)listener).exitDefStruct(this);
		}
	}
